objects/Lead.object
<CustomObject><businessProcesses>
        <fullName>MW Lead Process</fullName>
        <description>Lead Process for Known Contact and Unknown Contact Record Types</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed - Converted</fullName>
        </values>
        <values>
            <fullName>Closed - Unconverted</fullName>
        </values>
        <values>
            <fullName>Contacted</fullName>
        </values>
        <values>
            <fullName>Open</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Qualified</fullName>
        </values>
        <values>
            <fullName>To Call</fullName>
        </values>
        <values>
            <fullName>To Call Working</fullName>
        </values>
        <values>
            <fullName>Unqualified</fullName>
        </values>
    </businessProcesses><fields>
        <fullName>Account_Status__c</fullName>
        <formula>TEXT( Account__r.Account_Status__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Status</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Area_of_Interest__c</fullName>
        <label>Area of Interest</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>Bypass_Fuzzy_Matching__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Static flag to be used during lead conversion to bypass fuzzy matching rules in DupeBlocker</description>
        <label>Bypass Fuzzy Matching</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Call_Attempts__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Call Attempts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Call_Priority__c</fullName>
        <formula>RIGHT("0"&amp;TEXT(SFDC_Lead_Score__c),2) &amp; SUBSTITUTE(LEFT(TEXT(CreatedDate),10),"-","") &amp; SUBSTITUTE(LEFT(RIGHT(TEXT(CreatedDate),9),5), ":", "")</formula>
        <label>Call Priority</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Campaign_Offer__c</fullName>
        <description>The Campaign Name can sometimes be difficult to understand. The Campaign Offer is much easier to understand for Lead Qualification.</description>
        <label>Campaign Offer</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>City_Latin__c</fullName>
        <description>Used to capture the Latin value for City</description>
        <label>City (Latin)</label>
        <length>50</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Company_Latin__c</fullName>
        <description>Used to capture the company name in Latin</description>
        <label>Company (Latin)</label>
        <length>100</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Competitor__c</fullName>
        <label>Competitors</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Competitor</valueSetName>
        </valueSet>
    </fields><fields>
        <fullName>Completed_Date__c</fullName>
        <description>Date when lead was converted - Status set to Closed - ...</description>
        <label>Completed Date</label>
        <type>DateTime</type>
    </fields><fields>
        <fullName>Completed_Owner__c</fullName>
        <description>The lead owner who converted the lead</description>
        <label>Completed Owner</label>
        <length>50</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Contact_Discrepancy_Fields__c</fullName>
        <formula>if( FirstName!=Contact__r.FirstName, "First Name ","") 
&amp; if( LastName!=Contact__r.LastName, "Last Name ","")
&amp; if( Account__c!=Contact__r.AccountId, "Account ","")
&amp; if( City!=Contact__r.MailingCity, "City ","")
&amp; if( State!=Contact__r.MailingState, "State ","")
&amp; if( Country!=Contact__r.MailingCountry, "Country ","")
&amp; if( PostalCode!=Contact__r.MailingPostalCode, "Postal Code ","")
&amp; if( NonFormattedPhone__c!=Contact__r.NonFormattedPhone__c, "Phone ","")
&amp; if( NonFormattedMobilePhone__c!=Contact__r.NonFormattedMobilePhone__c, "Mobile ","")
&amp; if( Title!=Contact__r.Title, "Title ","")
&amp; if( Email!=Contact__r.Email, "Email ","")
&amp; if( Department__c!=Contact__r.Department, "Department ","")
&amp; if( First_Name_Latin__c!=Contact__r.First_Name_Latin__c, "First Name Latin ","")
&amp; if( Last_Name_Latin__c!=Contact__r.Last_Name_Latin__c, "Last Name Latin ","")
&amp; if( City_Latin__c!=Contact__r.City_Latin__c, "City Latin ","")
&amp; if( Text(Opt_Out_All_Emails__c)!=Text(Contact__r.Opt_Out_All_Emails__c), "Opt Out ","")</formula>
        <label>Contact Discrepancy Fields</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Contact_Discrepancy__c</fullName>
        <formula>if( (FirstName!=Contact__r.FirstName)||(LastName!=Contact__r.LastName)||(Account__c!=Contact__r.AccountId)||(City!=Contact__r.MailingCity)||(State!=Contact__r.MailingState)||(Country!=Contact__r.MailingCountry)||(PostalCode!=Contact__r.MailingPostalCode)||( NonFormattedPhone__c !=Contact__r.NonFormattedPhone__c )||( NonFormattedMobilePhone__c != Contact__r.NonFormattedMobilePhone__c )||(Title != Contact__r.Title)||( Email !=Contact__r.Email )||( Department__c != Contact__r.Department )||(First_Name_Latin__c!=Contact__r.First_Name_Latin__c )||(Last_Name_Latin__c!=Contact__r.Last_Name_Latin__c )||( City_Latin__c != Contact__r.City_Latin__c )||(Text(Opt_Out_All_Emails__c)!=Text(Contact__r.Opt_Out_All_Emails__c)), IMAGE("/resource/OutofSyncIndicator",""),"")</formula>
        <inlineHelpText>Lead details do not match contact record</inlineHelpText>
        <label>Contact Discrepancy</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.Account__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Conversion_Data_Missing__c</fullName>
        <formula>(IF
	(AND(NOT(ISBLANK(Country)),
	CONTAINS($Setup.Countries_Requiring_States__c.Countries_Requires_States__c ,TEXT(CountryCode)), ISBLANK(State)), "State ", "")) +
IF(ISBLANK(City),"City ", "") +
IF(ISBLANK(PostalCode),"Postal Code ", "") +
IF(ISBLANK(FirstName),"First Name ", "")</formula>
        <label>Conversion Data Missing</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Country_State_Code__c</fullName>
        <description>Concatenated Country Codes and state Code</description>
        <inlineHelpText>Concatenated Country Codes and state Code</inlineHelpText>
        <label>Country State Code</label>
        <length>250</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Created_Date_Time__c</fullName>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created Date/Time</label>
        <type>DateTime</type>
    </fields><fields>
        <fullName>Department_Latin__c</fullName>
        <description>Captures the department value in Latin</description>
        <label>Department (Latin)</label>
        <length>80</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Department__c</fullName>
        <description>Captures the department value (local)</description>
        <label>Department</label>
        <length>80</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Eloqua_Campaign_Most_Recent__c</fullName>
        <description>Most Recent Eloqua Campaign</description>
        <inlineHelpText>Most Recent Eloqua Campaign</inlineHelpText>
        <label>Eloqua Campaign Most Recent</label>
        <length>250</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Eloqua_Campaign_Original__c</fullName>
        <description>Eloqua Original campaign</description>
        <inlineHelpText>Eloqua Original campaign</inlineHelpText>
        <label>Eloqua Campaign Original</label>
        <length>250</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Eloqua_Contact_Id__c</fullName>
        <description>Eloqua Contact and the Salesforce lead can be retained even after a lead is converted or closed 
This is needed for reporting in the warehouse.</description>
        <label>Eloqua Contact Id</label>
        <length>18</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Email_Attempts__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Email Attempts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Existing_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Existing Opportunity</description>
        <label>Existing Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Faculty_or_Research_Advisor_Request__c</fullName>
        <description>Faculty or Research Advisor Request</description>
        <inlineHelpText>Faculty or Research Advisor Request</inlineHelpText>
        <label>Faculty or Research Advisor Request</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>Field_of_Study__c</fullName>
        <label>Field of Study</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Field_of_Study</valueSetName>
        </valueSet>
    </fields><fields>
        <fullName>File_Upload_Notes__c</fullName>
        <description>This field is used to capture 'file upload notes' that are part of lead uploads to Eloqua.  This data does not move to any other record on lead conversion.  This data is populated as part of the Eloqua send lead call. (Eloqua &gt; SF)</description>
        <inlineHelpText>This field is used to capture 'file upload notes' that are part of lead uploads to Eloqua.  This data does not move to any other record on lead conversion.</inlineHelpText>
        <label>File Upload Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>First_Assignment_Date__c</fullName>
        <description>Date/Time when lead was assigned to the owner</description>
        <label>First Assignment Date</label>
        <type>DateTime</type>
    </fields><fields>
        <fullName>First_Attempt_Date__c</fullName>
        <description>Date/Time of the first attempt</description>
        <label>First Attempt Date</label>
        <type>DateTime</type>
    </fields><fields>
        <fullName>First_Name_Latin__c</fullName>
        <description>Captures the Latin value for first name</description>
        <label>First Name (Latin)</label>
        <length>50</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Hand_Raiser_Responses__c</fullName>
        <description>This field will be populated by Eloqua for the Web form handraiser responses.</description>
        <inlineHelpText>Information related to Hand Raiser leads</inlineHelpText>
        <label>Response Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>Hand_Raiser_Type__c</fullName>
        <description>Type of Hand Raiser</description>
        <inlineHelpText>Type of Hand Raiser</inlineHelpText>
        <label>Hand Raiser Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Contact Maintenance</fullName>
                </value>
                <value>
                    <fullName>Quote Request</fullName>
                </value>
                <value>
                    <fullName>Contact Sales</fullName>
                </value>
                <value>
                    <fullName>Pricing Request</fullName>
                </value>
                <value>
                    <fullName>Contact Training</fullName>
                </value>
                <value>
                    <fullName>Pay Per Click</fullName>
                </value>
                <value>
                    <fullName>Professor Trials</fullName>
                </value>
                <value>
                    <fullName>Trial Request</fullName>
                </value>
                <value>
                    <fullName>Program Mktg</fullName>
                </value>
                <value>
                    <fullName>Sales Requested</fullName>
                </value>
                <value>
                    <fullName>Sales Maintenance Requested</fullName>
                </value>
                <value>
                    <fullName>Technical Support Qualified Lead</fullName>
                </value>
                <value>
                    <fullName>Contact Consulting</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>Individual_Account__c</fullName>
        <formula>if( Account__r.Is_Individual_Account__c &amp;&amp; (RecordType.Name == 'Known Contact'), IMAGE("/resource/OutofSyncIndicator",""),"")</formula>
        <inlineHelpText>Contact must be associated with a business account</inlineHelpText>
        <label>Individual Account</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Job_Role__c</fullName>
        <description>Job Role</description>
        <inlineHelpText>Job Role</inlineHelpText>
        <label>Self-Defined Job Role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Use the software</fullName>
                </value>
                <value>
                    <fullName>Manage teams using the software</fullName>
                </value>
                <value>
                    <fullName>Provide IT/licensing support</fullName>
                </value>
                <value>
                    <fullName>Purchase the software for others</fullName>
                </value>
                <value>
                    <fullName>Educator, Researcher (College, University)</fullName>
                </value>
                <value>
                    <fullName>Educator (K-12, Pre-College)</fullName>
                </value>
                <value>
                    <fullName>Software Admin (College, University)</fullName>
                </value>
                <value>
                    <fullName>Software Admin (K-12, Pre-College)</fullName>
                </value>
                <value>
                    <fullName>Postdoctoral</fullName>
                </value>
                <value>
                    <fullName>Student (Graduate-level)</fullName>
                </value>
                <value>
                    <fullName>Student (Undergraduate)</fullName>
                </value>
                <value>
                    <fullName>Student (K-12, Pre-College)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>Last_Assignment_Date__c</fullName>
        <description>Date when Lead was assigned to the owner last time. Default to First Assignment Date</description>
        <label>Last Assignment Date</label>
        <type>DateTime</type>
    </fields><fields>
        <fullName>Last_Attempt_Date__c</fullName>
        <description>Date/Time of the last attempt</description>
        <label>Last Attempt Date</label>
        <type>DateTime</type>
    </fields><fields>
        <fullName>Last_Name_Latin__c</fullName>
        <description>Captures the last name value in Latin</description>
        <label>Last Name (Latin)</label>
        <length>50</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Lead_Age_Hours__c</fullName>
        <description>Calculates Lead age in hours. For Close Lead Completed Date - Created Date, for Open Leads Now - Created Date</description>
        <formula>IF( OR(ISPICKVAL( Status , 'Closed - Converted'),ISPICKVAL( Status , 'Closed - Unconverted'))  , 
(Completed_Date__c  - Created_Date_Time__c)*24,  (Now()  - Created_Date_Time__c)*24)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Age (Hours)</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Lead_Age__c</fullName>
        <description>Age of the Lead based on the created date</description>
        <formula>Today() -  DATEVALUE(CreatedDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Age of the Lead based on the created date</inlineHelpText>
        <label>Lead Age</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Lead_Follow_Up_Date__c</fullName>
        <description>Field will be set manually</description>
        <label>Lead Follow Up Date</label>
        <type>Date</type>
    </fields><fields>
        <fullName>Lead_Requester__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Sales Reps who requested the lead</description>
        <inlineHelpText>Sales Reps who requested the lead</inlineHelpText>
        <label>Requesting Sales Rep</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Lead_Requester</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Lead_Score_High_Value_Web_Content__c</fullName>
        <description>Lead Score - High Value Web Content</description>
        <inlineHelpText>Lead Score - High Value Web Content</inlineHelpText>
        <label>Lead Score - High Value Web Content</label>
        <type>Url</type>
    </fields><fields>
        <fullName>Lead_Score_Last_High_Touch_Event_Date__c</fullName>
        <description>Lead Score – Last High Touch Event Date</description>
        <inlineHelpText>Lead Score – Last High Touch Event Date</inlineHelpText>
        <label>Lead Score – Last High Touch Event Date</label>
        <type>Date</type>
    </fields><fields>
        <fullName>Lead_Score__c</fullName>
        <description>lead score value set by Eloqua</description>
        <label>Lead Score</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A1</fullName>
                </value>
                <value>
                    <fullName>A2</fullName>
                </value>
                <value>
                    <fullName>A3</fullName>
                </value>
                <value>
                    <fullName>A4</fullName>
                </value>
                <value>
                    <fullName>B1</fullName>
                </value>
                <value>
                    <fullName>B2</fullName>
                </value>
                <value>
                    <fullName>B3</fullName>
                </value>
                <value>
                    <fullName>B4</fullName>
                </value>
                <value>
                    <fullName>C1</fullName>
                </value>
                <value>
                    <fullName>C2</fullName>
                </value>
                <value>
                    <fullName>C3</fullName>
                </value>
                <value>
                    <fullName>C4</fullName>
                </value>
                <value>
                    <fullName>D1</fullName>
                </value>
                <value>
                    <fullName>D2</fullName>
                </value>
                <value>
                    <fullName>D3</fullName>
                </value>
                <value>
                    <fullName>D4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>Link_To_Lead__c</fullName>
        <description>Environment specific link to lead within the console</description>
        <formula>$Label.Console_URL</formula>
        <label>Link To Lead</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Location__c</fullName>
        <description>Calculates the location based on country code, city, statecode, sector</description>
        <formula>City &amp;' '&amp; 
IF(
    OR(
        Text(CountryCode) ='JP'
        ,Text(CountryCode) ='KR'
        ,Text(CountryCode) ='CN'
    )
    ,State_Province_Latin__c
    ,IF(
        Text(CountryCode) ='IN'
        ,State
        ,IF(
            OR(
                Text(CountryCode) ='AU'
                ,Text(CountryCode) ='CA'
                ,Text(CountryCode) ='IT'
                ,Text(CountryCode) ='MX'
                ,Text(CountryCode) ='US'
            )
            ,Country_State_Code__c
            ,TEXT(CountryCode)
        )
    )
)
&amp;' '&amp;  
IF(
    ISPICKVAL(Sector__c,'Education')
    ,'EDU'
    ,IF(
        ISPICKVAL(Sector__c,'Government')
        ,'GOV'
        ,'COM'
    )
)&amp;' '&amp; IF( TEXT(Account__r.Account_Status__c) ='Unvalidated', 'UV', '')</formula>
        <label>Location</label>
        <type>Text</type>
    </fields><fields>
        <fullName>MATLAB_experience__c</fullName>
        <description>Any experience using MATLAB</description>
        <inlineHelpText>Any experience using MATLAB</inlineHelpText>
        <label>MATLAB experience</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Never Used</fullName>
                </value>
                <value>
                    <fullName>Used in the Past</fullName>
                </value>
                <value>
                    <fullName>Current User</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>MathWorks_Account_ID__c</fullName>
        <description>Used to capture the MW Account ID on lead (from Eloqua) and maped to Contact from Lead.  NOT displayed on page layout .</description>
        <label>MathWorks Account ID</label>
        <length>20</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Mintigo_Grade__c</fullName>
        <description>Mintigo Lead Grade (A-F)</description>
        <label>Mintigo Grade</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>D</fullName>
                </value>
                <value>
                    <fullName>E</fullName>
                </value>
                <value>
                    <fullName>F</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>Mintigo_Lead_Score__c</fullName>
        <description>Mintigo Lead Score</description>
        <label>Mintigo Lead Score</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A1</fullName>
                </value>
                <value>
                    <fullName>A2</fullName>
                </value>
                <value>
                    <fullName>A3</fullName>
                </value>
                <value>
                    <fullName>A4</fullName>
                </value>
                <value>
                    <fullName>B1</fullName>
                </value>
                <value>
                    <fullName>B2</fullName>
                </value>
                <value>
                    <fullName>B3</fullName>
                </value>
                <value>
                    <fullName>B4</fullName>
                </value>
                <value>
                    <fullName>C1</fullName>
                </value>
                <value>
                    <fullName>C2</fullName>
                </value>
                <value>
                    <fullName>C3</fullName>
                </value>
                <value>
                    <fullName>C4</fullName>
                </value>
                <value>
                    <fullName>D1</fullName>
                </value>
                <value>
                    <fullName>D2</fullName>
                </value>
                <value>
                    <fullName>D3</fullName>
                </value>
                <value>
                    <fullName>D4</fullName>
                </value>
                <value>
                    <fullName>F1</fullName>
                </value>
                <value>
                    <fullName>F2</fullName>
                </value>
                <value>
                    <fullName>F3</fullName>
                </value>
                <value>
                    <fullName>F4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>Mintigo_Score__c</fullName>
        <description>Mintigo Score (values 1-100)</description>
        <label>Mintigo Score</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>My_Leads__c</fullName>
        <description>Indicates if the current user is the owner of the lead or the requester on the lead</description>
        <formula>IF(  OR( $User.Id =  OwnerId ,CASESAFEID($User.Id)  =  CASESAFEID( OwnerId__c )) , true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>My Leads</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>NonFormattedMobilePhone__c</fullName>
        <description>Strip out formatting to use in discrepancy indicator calculation</description>
        <formula>SUBSTITUTE( 
SUBSTITUTE( 
SUBSTITUTE( 
SUBSTITUTE(
SUBSTITUTE(
SUBSTITUTE( 
SUBSTITUTE(
SUBSTITUTE(
SUBSTITUTE(  MobilePhone  , "(", ""), ")", ""), " ", ""), "-", ""), "+", ""), "ext", ""), ".", ""),"e", ""), "x", "")</formula>
        <label>NonFormattedMobilePhone</label>
        <type>Text</type>
    </fields><fields>
        <fullName>NonFormattedPhone__c</fullName>
        <formula>SUBSTITUTE( 
SUBSTITUTE( 
SUBSTITUTE( 
SUBSTITUTE(
SUBSTITUTE(
SUBSTITUTE( 
SUBSTITUTE(
SUBSTITUTE(
SUBSTITUTE(   Phone   , "(", ""), ")", ""), " ", ""), "-", ""), "+", ""), "ext", ""), ".", ""),"e", ""), "x", "")</formula>
        <label>NonFormattedPhone</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Office__c</fullName>
        <description>MW Sales Office</description>
        <label>Office</label>
        <length>100</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Opportunity_Primary_Purpose__c</fullName>
        <formula>IF(OR(ISPICKVAL(Hand_Raiser_Type__c,'Contact Maintenance'),ISPICKVAL(Hand_Raiser_Type__c,'Sales Maintenance Requested')), 'Renewal', '')</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Primary Purpose</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Opt_Out_All_Emails__c</fullName>
        <label>Opt-Out: All Emails</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>OPTOUT</fullName>
                </value>
                <value>
                    <fullName>OPTIN</fullName>
                </value>
                <value>
                    <fullName>UNKNOWN</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>Original_Lead_Source__c</fullName>
        <description>Original Lead Score</description>
        <inlineHelpText>Original Lead Score</inlineHelpText>
        <label>Original Lead Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Value 1</fullName>
                </value>
                <value>
                    <fullName>Value 2</fullName>
                </value>
                <value>
                    <fullName>Value 3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>Outcome__c</fullName>
        <description>Outcome Values</description>
        <label>Outcome</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Did Not Create Opportunity</fullName>
                </value>
                <value>
                    <fullName>Not a Target Customer</fullName>
                </value>
                <value>
                    <fullName>Could Not Reach</fullName>
                </value>
                <value>
                    <fullName>Student</fullName>
                </value>
                <value>
                    <fullName>Edu Email Sent</fullName>
                </value>
                <value>
                    <fullName>Incomplete/Bad Data</fullName>
                </value>
                <value>
                    <fullName>Access To Existing License</fullName>
                </value>
                <value>
                    <fullName>Non Licensed User</fullName>
                </value>
                <value>
                    <fullName>Home Use</fullName>
                </value>
                <value>
                    <fullName>Existing Lead</fullName>
                </value>
                <value>
                    <fullName>Passive Recycled - Poor Quality</fullName>
                </value>
                <value>
                    <fullName>Passive Recycled - Volume</fullName>
                </value>
                <value>
                    <fullName>Converted</fullName>
                </value>
                <value>
                    <fullName>Existing Opportunity</fullName>
                </value>
                <value>
                    <fullName>Web Store Order</fullName>
                </value>
                <value>
                    <fullName>Customer Service / Technical Support</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>OwnerId__c</fullName>
        <description>This is the hidden Owner Id Field that will be set by Eloqua</description>
        <label>OwnerId</label>
        <length>20</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Pre_Call_Research_Notes__c</fullName>
        <description>Lead Qualification team can document their findings during their pre-call research and reference those notes during call</description>
        <label>Pre-Call Research Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>Price_Trial_request__c</fullName>
        <description>Request for a Price/Trial</description>
        <inlineHelpText>Request for a Price/Trial</inlineHelpText>
        <label>Price/Trial request</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>Prior_Own__c</fullName>
        <description>Prior lead's owner , excluding Queue</description>
        <label>Prior Owner</label>
        <length>100</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Record_Completeness_Percent__c</fullName>
        <formula>(
   IF(ISBLANK(FirstName),0,1) +
   IF(ISBLANK(Country),0,
	IF( 
	    AND(
		  CONTAINS($Setup.Countries_Requiring_States__c.Countries_Requires_States__c ,TEXT(CountryCode)) 
		,ISBLANK(State))
		, 0,1
	   ))+
   IF(ISBLANK(City),0,1) + 
   IF(ISBLANK(PostalCode),0,1)
)/4</formula>
        <label>Conversion Data Completeness %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields><fields>
        <fullName>Record_Completeness__c</fullName>
        <formula>CASE(Record_Completeness_Percent__c, 
1,"",IMAGE("/resource/OutofSyncIndicator", "True Image" ))</formula>
        <label>Conversion Data Required</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Requesting_Sales_Rep_Icon__c</fullName>
        <description>Indicates that lead has been requested by  Sales Rep</description>
        <formula>CASE( Lead_Requester__c , "", "",IMAGE( "/img/icon/profile16.png", "True Image" ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Requesting Sales Rep Indicator</label>
        <type>Text</type>
    </fields><fields>
        <fullName>SFDC_Campaign_ID__c</fullName>
        <description>This field will be populated with SFDC Campaign Id once the lead is created.  The SFDC Campaign Id will be used to associate the field to Campaign by trigger SFDC.</description>
        <label>SFDC Campaign ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>    </validationRules></CustomObject>